--- a/Android/Protisruti/app/src/main/res/drawable/background.xml
+++ b/Android/Protisruti/app/src/main/res/drawable/background.xml
@@ -4,5 +4,5 @@
     android:startColor="#E8B5E3"
     android:centerColor="#F2C2D6"
     android:endColor="#FFCCCC"
-    android:angle="-135"
+    android:angle="-135"/>
 </shape>
