--- a/Android/Protisruti/app/src/main/res/layout/login.xml
+++ b/Android/Protisruti/app/src/main/res/layout/login.xml
@@ -8,13 +8,12 @@
     android:background="@drawable/splash_screen_img"
     android:alpha="0.70">
 
-
-
+//enter your phone no
     <TextView
-        android:id="@+id/temperature_value"
+        android:id="@+id/enter_phone_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Enter You Phone Number"
+        android:text="Enter Your Phone Number"
         android:textColor="#000"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -23,22 +22,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.29" />
+//number box
 
     <com.poovam.pinedittextfield.SquarePinField
-        android:id="@+id/squareField"
-        android:layout_width="350dp"
-        android:layout_height="100dp"
+        android:id="@+id/numberbox"
+        android:layout_width="361dp"
+        android:layout_height="58dp"
+        android:layout_marginBottom="424dp"
         android:inputType="text"
         android:textSelectHandle="@drawable/text_handle"
         android:textSize="16sp"
         app:cornerRadius="10dp"
         app:fieldBgColor="#ddd"
-        app:layout_constraintBottom_toBottomOf="parent"
 
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/temperature_value"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_bias="0.025"
         app:noOfFields="11" />
 </androidx.constraintlayout.widget.ConstraintLayout>
