--- a/Android/Protisruti/app/src/main/res/layout/otp.xml
+++ b/Android/Protisruti/app/src/main/res/layout/otp.xml
@@ -7,27 +7,27 @@
     tools:context=".MainActivity"
     android:alpha="0.70"
     android:background="@drawable/splash_screen_img">
-
+//enter OTP
     <TextView
-        android:id="@+id/otp"
+        android:id="@+id/enter_otp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Enter OTP"
+        android:text="ENTER OTP"
         android:textColor="#000"
-        android:textSize="30sp"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.305" />
-
+//otp box
     <com.poovam.pinedittextfield.SquarePinField
-        android:id="@+id/squareField"
-        android:layout_width="250dp"
-        android:layout_height="100dp"
-        android:layout_marginBottom="380dp"
+        android:id="@+id/otp_box"
+        android:layout_width="251dp"
+        android:layout_height="64dp"
+        android:layout_marginBottom="412dp"
         android:inputType="text"
         android:textSelectHandle="@drawable/text_handle"
         android:textSize="16sp"
@@ -36,7 +36,6 @@
 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/temperature_value"
         app:layout_constraintVertical_bias="0.0"
