--- a/Android/Protisruti/app/src/main/res/layout/user_profile.xml
+++ b/Android/Protisruti/app/src/main/res/layout/user_profile.xml
@@ -84,11 +84,14 @@
         app:layout_constraintVertical_bias="0.168" />
 
     //user_location
+
+    //land_location_title
+
     <TextView
         android:id="@+id/user_location"
         android:layout_width="223dp"
         android:layout_height="26dp"
-        android:text="Shawarupkathi, Barishal"
+        android:text="Swarupkathi, Barishal"
         android:textColor="#676767"
         android:textSize="20sp"
         android:textStyle="normal"
@@ -99,7 +102,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.218" />
 
-    //land_location_title
     <TextView
         android:id="@+id/land_location_title"
         android:layout_width="wrap_content"
