--- a/Android/Protisruti/app/src/main/res/menu/main_drawer1_activity2.xml
+++ b/Android/Protisruti/app/src/main/res/menu/main_drawer1_activity2.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:showIn="navigation_view">
+    tools:showIn="navigation_view"
+    android:alpha="0.50">
 
     <group android:checkableBehavior="single">
 
