Log in with phone number added

--- a/Protisruti/protisrutiot/templates/index.html
+++ b/Protisruti/protisrutiot/templates/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
-    <df-messenger chat-icon="https:&#x2F;&#x2F;binarybros.digital&#x2F;roshnee&#x2F;protisruti_rookha.png" chat-title="NewPro" agent-id="f4348cad-4aae-4f0a-8420-1bfc0b5d223b" language-code="en"></df-messenger>
+    <df-messenger chat-icon="https:&#x2F;&#x2F;binarybros.digital&#x2F;roshnee&#x2F;protisruti_rookha.png" chat-title="Protisruti" agent-id="f4348cad-4aae-4f0a-8420-1bfc0b5d223b" language-code="en"></df-messenger>
 
     <h1>Time :{{Time}}</h1>
     <h1>Moisture :{{most}}</h1>
