--- a/Protisruti/protisrutiot/templates/home.html
+++ b/Protisruti/protisrutiot/templates/home.html
@@ -21,7 +21,9 @@
   </head>
   <body>
     <header>
-    
+    <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
+    <df-messenger chat-icon="https:&#x2F;&#x2F;binarybros.digital&#x2F;roshnee&#x2F;protisruti_rookha.png" chat-title="Protisruti" agent-id="f4348cad-4aae-4f0a-8420-1bfc0b5d223b" language-code="en"></df-messenger>
+
   <!--Navbar-->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar">
     <div class="container">
@@ -34,6 +36,7 @@
             <button
   type="button"
   class="btn btn-outline-warning btn-rounded"
+  
   data-mdb-ripple-color="dark"
 >
   LOG OUT
